# startups-backend

./: .env.dist  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  auth.py  config.py  deps.py  project.py
app/models/: models.py
app/routers/: __init__.py  auth.py  like_view_share.py  main.py  projects.py  upload.py
app/schemas/: __init__.py  project.py  user.py
